tests/string_concat_nonliteral_bad.stderr
tests/string_concat_nonliteral_bad.hop:4:10: error: HOP2053: string '+' currently only supports non-parenthesized literal chains
