tests/string_concat_nonliteral_bad.hop
// Verifies string concatenation nonliteral is rejected.
fn main() {
	b := "mutable"
	var c = b + "string"
	_ = c
}
